Fix add-ons wrap issue

--- a/assets/dev/sass/generic/_generic.scss
+++ b/assets/dev/sass/generic/_generic.scss
@@ -184,8 +184,8 @@
 }
 
 .wps_page {
-  
-  .wrap:not(wps-wrap) {
+
+  .wrap:not(.wps-wrap) {
     margin-right: 0 !important;
     margin-left: 0 !important;
     padding: 0 20px;
